# textspec

./: Cargo.toml  README.md  cargo-deny-output.txt  cpu.rs  deny.toml  display.rs  gpu.rs  main.rs  models.rs  motherboard.rs  os.rs  output.rs  ram.rs  storage.rs
.github/: FUNDING.yml
src/: main.rs  models.rs  output.rs
src/collectors/: cpu.rs  display.rs  gpu.rs  mod.rs  motherboard.rs  os.rs  peripherals.rs  ram.rs  storage.rs
