[package]
name = "textspec"
version = "0.1.0"
edition = "2021"
description = "Clean hardware spec snapshot for sharing"
authors = ["Thad Williams"]

[[bin]]
name = "textspec"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
